fix document linking

--- a/defects/DEF002.md
+++ b/defects/DEF002.md
@@ -8,7 +8,7 @@ assignees: ''
 
 ## Defect Information
 - **Defect ID:** DEF002
-- - **Test Session ID:** [Session002](../test-cases/exp/Session002.md)
+- **Test Session ID:** [Session002](../test-cases/exp/Session002.md)
 - **Description:** Resetting the password causes the computer to explode.
 - **Severity:** 
   - [ ] Critical
